--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
                             "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                             "node_modules/primeicons/primeicons.css",
                             "node_modules/primeng/resources/themes/nova-light/theme.css",
-                            "node_modules/primeng/resources/primeng.css"
+                            "node_modules/primeng/resources/primeng.css",
+                            "./node_modules/leaflet/dist/leaflet.css"
                         ],
                         "scripts": [],
                         "es5BrowserSupport": true
