--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0",
     "@angular/animations": "^7.2.15",
     "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
@@ -26,7 +27,8 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.0",
-    "leaflet": "^1.7.1",
+    "leaflet": "^1.8.0",
+    "moment": "^2.29.3",
     "ng2-search-filter": "^0.5.1",
     "ngx-socket-io": "^2.0.0",
     "popper.js": "^1.15.0",
