--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 # Ignorar el contenido de las carpetas node_modules, dist y package-lock
 node_modules/
-dist/operativos
+dist/incidentes
 package-lock.json
