--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,9 @@
                             "node_modules/primeng/resources/primeng.css",
                             "./node_modules/leaflet/dist/leaflet.css"
                         ],
-                        "scripts": [],
+                        "scripts": [
+                            "./node_modules/chart.js/dist/Chart.js"
+                        ],
                         "es5BrowserSupport": true
                     },
                     "configurations": {
