--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.0",
     "leaflet": "^1.8.0",
     "moment": "^2.29.3",
+    "ng2-charts": "^1.6.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-socket-io": "^2.0.0",
     "popper.js": "^1.15.0",
